# seon-core

./: AGENTS.md  README.md  meson.build
output/: seon.lib  signature_data.h
protector/: meson.build
protector/include/: checker.h  seon.h
protector/src/: checker.cpp  dllmain.cpp
scripts/: build.bat  clean.bat  gensig.bat  rebuild.bat  run.bat  setup.bat
src/: main.cpp  meson.build
tools/sigtool/: meson.build
tools/sigtool/src/: sigtool.cpp
